[package]
name = "smolheed"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
description = "A thin wrapped on top of LMDB with minimum overhead"
license = "MIT"
repository = "https://github.com/Kerollmops/smolheed"
keywords = ["lmdb", "database", "storage"]
categories = ["database", "data-structures"]
readme = "README.md"
edition = "2021"

[dependencies]
libc = "0.2.80"
lmdb-rkv-sys = "0.11.0"
once_cell = "1.5.2"
page_size = "0.4.2"
synchronoise = "1.0.0"

[target.'cfg(windows)'.dependencies]
url = "2.2.0"

[features]
default = []

# The NO_TLS flag is automatically set on Env opening and
# RoTxn implements the Sync trait. This allow the user to reference
# a read-only transaction from multiple threads at the same time.
sync-read-txn = []
